src/components/lyne-autocomplete/styles/lyne-autocomplete.component.scss
// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin, available for shared
// and default mode
@include host-component-properties;

:host {
  display: block;
  border-radius: pxToRem(var(--border-radius-4x));
  background-color: var(--color-white-default);

  --input-height: 48; // TODO Design Token??

  @include mq($from: medium) {
    --input-height: 56; // TODO Design Token??
  }
}

.autocomplete {
  position: relative;
}

